Mon Oct  9 11:32:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/ntsecapi.h: Fix PLSA_UNICODE_STRING define.

Sun Oct  8 18:26:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/ntsecapi.h: New file.
	* include/subauth.h: Ditto.
	* include/ipexport.h: Fix global header define not to contain
	trailing underscore. Change layout according to standard.
	* include/iphlpapi.h: Ditto.
	* include/ipifcons.h: Ditto.
	* include/iprtrmib.h: Ditto.
	* include/iptypes.h: Ditto.
	* include/ntdef.h: Ditto. Define conditional datatypes dependent
	of inclusion of ntsecapi.h and subauth.h.
	* lib/secur32.def: New stub for secur32.dll.

Mon Oct  2 11:15:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * include/ras.h: New file.
        * lib/rasapi32.def: Add symbols for RasEnumDevicesA and
        RasEnumDevicesW.

Mon Oct  2 10:56:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/ntdef.h: Add define for NTAPI.

Sun Oct  1 23:55:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * include/ipexport.h: Add missing `extern "C"' directives.
        * include/iphlpapi.h: Ditto.
        * include/iprtrmib.h: Ditto.
        * include/iptypes.h: Ditto.

Sun Oct  1 22:09:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * include/ipifcons.h: New header file.
        * include/iprtrmib.h: Move operational states to ipifcons.h.
        * include/iphlpapi.h: Add missing parameters to GetIfTable()
        declaration.

Sun Oct  1 16:30:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * include/iprtrmib.h: Add missing MIB_IF_OPER_STATUS_xxx definitions.

Sun Oct  1 16:13:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * lib/iphlpapi.def: New stub for iphlpapi.dll.
        * include/iptypes.h: New header file.
        * include/ipexport.h: Ditto.
        * include/iphlpapi.h: Ditto.
        * include/iprtrmib.h: Ditto.

Sun Oct  1  2:54:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/ntdef.h: New file.
