@@ -18,7 +18,7 @@ extern "C" {
 #define LSA_MODE_INDIVIDUAL_ACCOUNTS 2
 #define LSA_MODE_MANDATORY_ACCESS 3
 #define LSA_MODE_LOG_FULL 4
-#define LSA_SUCCESS(Error) ((LONG)(Error) >= 0)
+#define LSA_SUCCESS(x) ((LONG)(x)>=0)
 #define MSV1_0_ALLOW_SERVER_TRUST_ACCOUNT 32
 #define MSV1_0_ALLOW_WORKSTATION_TRUST_ACCOUNT 2048
 #define MSV1_0_CHALLENGE_LENGTH 8
@@ -33,11 +33,11 @@ extern "C" {
 #define MSV1_0_MNS_LOGON 16777216
 #define MSV1_0_NTLM3_RESPONSE_LENGTH 16
 #define MSV1_0_NTLM3_OWF_LENGTH 16
-#define MSV1_0_NTLM3_INPUT_LENGTH (sizeof(MSV1_0_NTLM3_RESPONSE) - MSV1_0_NTLM3_RESPONSE_LENGTH)
+#define MSV1_0_NTLM3_INPUT_LENGTH (sizeof(MSV1_0_NTLM3_RESPONSE)-MSV1_0_NTLM3_RESPONSE_LENGTH)
 #define MSV1_0_OWF_PASSWORD_LENGTH 16
 #define MSV1_0_PACKAGE_NAME "MICROSOFT_AUTHENTICATION_PACKAGE_V1_0"
 #define MSV1_0_PACKAGE_NAMEW L"MICROSOFT_AUTHENTICATION_PACKAGE_V1_0"
-#define MSV1_0_PACKAGE_NAMEW_LENGTH sizeof(MSV1_0_PACKAGE_NAMEW) - sizeof(WCHAR)
+#define MSV1_0_PACKAGE_NAMEW_LENGTH sizeof(MSV1_0_PACKAGE_NAMEW)-sizeof(WCHAR)
 #define MSV1_0_RETURN_USER_PARAMETERS 8
 #define MSV1_0_RETURN_PASSWORD_EXPIRY 64
 #define MSV1_0_RETURN_PROFILE_PATH 512
